FIX: Overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,7 +66,6 @@ section {
   color: var(--text-white);
   font-size: 3rem;
   font-weight: bold;
-  overflow: hidden;
 }
 
 .co-title {
@@ -78,7 +77,6 @@ section {
 .paragraph {
   color: var(--text-p);
   font-size: 1.5rem;
-  overflow: hidden;
 }
 
 .content {
@@ -88,7 +86,6 @@ section {
   justify-content: center;
   align-items: center;
   gap: 20px;
-  overflow: hidden;
 }
 
 .container-minimal {
@@ -98,7 +95,6 @@ section {
   justify-content: center;
   align-items: center;
   gap: 20px;
-  overflow: hidden;
 }
 
 .content-minimal {
@@ -108,14 +104,12 @@ section {
   justify-content: flex-start;
   align-items: flex-start;
   gap: 20px;
-  overflow: hidden;
 }
 
 .title-content {
   color: var(--text-white);
   font-weight: bold;
   font-size: 1.7rem;
-  overflow: hidden;
 }
 
 .title-minimal {
@@ -135,7 +129,6 @@ section {
   flex-direction: column;
   gap: 20px;
   text-align: left;
-  overflow: hidden;
 }
 
 .text-container-minimal {
@@ -144,12 +137,10 @@ section {
   flex-direction: column;
   gap: 20px;
   text-align: left;
-  overflow: hidden;
 }
 
 .image {
   width: 50%;
-  overflow: hidden;
 }
 
 .image img {
@@ -161,7 +152,6 @@ section {
 
 .image-minimal {
   width: 45%;
-  overflow: hidden;
 }
 
 .image-minimal img {
